[package]
name = "warp_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = "2.0.0"
pretty_env_logger = "0.4.0"
serde_derive = "1.0.130"
serde_json = "1.0.68"
thiserror = "1.0.29"
warp = "0.3.1"
futures = "0.3.17"

[dependencies.redis]
version = "0.21.2"
features = ["tokio-comp", "connection-manager"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.tokio]
version = "1.12.0"
features = ["full"]
